add new website from server na

--- a/xem-phim-bo/nguoi-tinh-dna/index.html
+++ b/xem-phim-bo/nguoi-tinh-dna/index.html
@@ -1188,7 +1188,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1768,40 +1768,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/johnny-hallyday-hon-ca-rock" title="Johnny Hallyday: Hơn cả Rock">
+          <a class="list-top-movie-link" href="/phim-moi/pa-pa-loves-you" title="Pa Pa Loves You">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/johnny-hallyday-hon-ca-rock-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pa-pa-loves-you-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Johnny Hallyday: Hơn cả Rock
+             Pa Pa Loves You
             </span>
             <span class="list-top-movie-item-en">
-             Johnny Hallyday: Beyond Rock
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-dieu-tot-dep" title="Những Điều Tốt Đẹp">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-dieu-tot-dep-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Những Điều Tốt Đẹp
-            </span>
-            <span class="list-top-movie-item-en">
-             All Good Things
+             Pa Pa Loves You
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1812,21 +1790,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vuong-quoc-giong-to-phan-1" title="Vương Quốc Giông Tố (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/tieu-dao" title="Tiểu Đào">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vuong-quoc-giong-to-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tieu-dao-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vương Quốc Giông Tố (Phần 1)
+             Tiểu Đào
             </span>
             <span class="list-top-movie-item-en">
-             The Kingdom (Season 1)
+             The Isle
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1834,18 +1812,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/kaguya-sama-cuoc-chien-to-tinh-nu-hon-dau-khong-hoi-ket" title="Kaguya-sama: Cuộc chiến tỏ tình – Nụ hôn đầu không hồi kết">
+          <a class="list-top-movie-link" href="/phim-moi/97-phut-song-con" title="97 Phút Sống Còn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kaguya-sama-cuoc-chien-to-tinh-nu-hon-dau-khong-hoi-ket-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/97-phut-song-con-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Kaguya-sama: Cuộc chiến tỏ tình – Nụ hôn đầu không hồi kết
+             97 Phút Sống Còn
             </span>
             <span class="list-top-movie-item-en">
-             かぐや様は告らせたい-ファーストキッスは終わらない-
+             97 Minutes
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1856,18 +1834,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/su-gia-than-chet" title="Sứ Giả Thần Chết">
+          <a class="list-top-movie-link" href="/phim-moi/tinh-duc-la-chuyen-nho-2" title="Tình dục là chuyện nhỏ 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-gia-than-chet-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-duc-la-chuyen-nho-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sứ Giả Thần Chết
+             Tình dục là chuyện nhỏ 2
             </span>
             <span class="list-top-movie-item-en">
-             Bleach
+             Sex is Zero II
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/huong-vi-dong-tien" title="Hương Vị Đồng Tiền">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/huong-vi-dong-tien-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hương Vị Đồng Tiền
+            </span>
+            <span class="list-top-movie-item-en">
+             The Taste of Money
             </span>
             <span class="list-top-movie-item-view">
              0 lượt xem
