add new website from server na

--- a/xem-phim-bo/nguoi-tinh-dna/index.html
+++ b/xem-phim-bo/nguoi-tinh-dna/index.html
@@ -1188,7 +1188,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1768,18 +1768,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/silk-road" title="Silk Road">
+          <a class="list-top-movie-link" href="/phim-moi/jack-va-dai-chien-nguoi-khong-lo" title="Jack và Đại Chiến Người Khổng Lồ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/silk-road-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/jack-va-dai-chien-nguoi-khong-lo-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Silk Road
+             Jack và Đại Chiến Người Khổng Lồ
             </span>
             <span class="list-top-movie-item-en">
-             Silk Road
+             Jack the Giant Slayer
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1790,21 +1790,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cun-ngoai-khong-gian" title="Cún ngoài không gian">
+          <a class="list-top-movie-link" href="/phim-moi/chien-binh-riddick" title="Chiến Binh Riddick">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cun-ngoai-khong-gian-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chien-binh-riddick-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cún ngoài không gian
+             Chiến Binh Riddick
             </span>
             <span class="list-top-movie-item-en">
-             Dogs in Space
+             The Chronicles of Riddick
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1812,18 +1812,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thi-tran-gau-meo-trong-dien-thoai-mua-2" title="Thị Trấn Gấu Mèo Trong Điện Thoại Mùa 2">
+          <a class="list-top-movie-link" href="/phim-moi/dieu-cha-cha-cha-lang-bien" title="Điệu cha-cha-cha làng biển">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thi-tran-gau-meo-trong-dien-thoai-mua-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dieu-cha-cha-cha-lang-bien-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thị Trấn Gấu Mèo Trong Điện Thoại Mùa 2
+             Điệu cha-cha-cha làng biển
             </span>
             <span class="list-top-movie-item-en">
-             手机里的浣熊小镇 第二季
+             Hometown Cha-Cha-Cha
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1834,21 +1834,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-bear-phan-3" title="The Bear (Phần 3)">
+          <a class="list-top-movie-link" href="/phim-moi/doi-dua-ma-vang" title="Đôi Đũa Mạ Vàng">
            <span class="status">
-            HD Vietsub
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-bear-phan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-dua-ma-vang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             The Bear (Phần 3)
+             Đôi Đũa Mạ Vàng
             </span>
             <span class="list-top-movie-item-en">
-             The Bear (Season 3)
+             Gilded Chopsticks
             </span>
             <span class="list-top-movie-item-view">
-             7 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1856,21 +1856,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-hoi-duoc-song" title="Cơ Hội Được Sống">
+          <a class="list-top-movie-link" href="/phim-moi/thu-pham-chua-lo-dien" title="Thủ Phạm Chưa Lộ Diện">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-hoi-duoc-song-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thu-pham-chua-lo-dien-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cơ Hội Được Sống
+             Thủ Phạm Chưa Lộ Diện
             </span>
             <span class="list-top-movie-item-en">
-             Justice Served
+             Among Them
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
